--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
       <div class="divShow">
         <div class="structureCarte"></div>
         <div class="imageCarte"></div>
+        <div class="points"></div>
+        <div class="timerContainer"></div>
       </div>
       <div class="cardContainer">
-        <img src="" alt="" class="card" id="main1" />
-        <img src="" alt="" class="card" id="main2" />
-        <img src="" alt="" class="card" id="main3" />
-        <img src="" alt="" class="card" id="main4" />
+        <img src="" alt="carte1" class="card" id="main1" />
+        <img src="" alt="carte2" class="card" id="main2" />
+        <img src="" alt="carte3" class="card" id="main3" />
+        <img src="" alt="carte4" class="card" id="main4" />
+        <img src="" alt="carte5" class="card" id="main5" />
       </div>
       <div class="pioche">
         <img src="assets/pioche.png" alt="" id="pioche" />
