--- a/index.html
+++ b/index.html
@@ -8,22 +8,29 @@
   </head>
   <body>
     <div class="mainContainer">
-      <div class="divShow">
-        <div class="structureCarte"></div>
-        <div class="imageCarte"></div>
-        <div class="points"></div>
-        <div class="timerContainer"></div>
-      </div>
-      <div class="cardContainer">
-        <img src="" alt="carte1" class="card" id="main1" />
-        <img src="" alt="carte2" class="card" id="main2" />
-        <img src="" alt="carte3" class="card" id="main3" />
-        <img src="" alt="carte4" class="card" id="main4" />
-        <img src="" alt="carte5" class="card" id="main5" />
-      </div>
-      <div class="pioche">
-        <img src="assets/pioche.png" alt="" id="pioche" />
-      </div>
+
+        <div class="divShow">
+          <div class="structureCarte"></div>
+          <div class="pioche">
+            <img src="assets/pioche.png" alt="pioche" id="pioche" />
+          </div>
+          <div class="points"></div>            
+          <div class="imageCarte"></div>
+          <div class="timerContainer"><div class="timer"></div></div>
+        </div>
+
+        <div class="cardContainer">
+          <img src="" alt="carte1" class="card" id="main1" />
+          <img src="" alt="carte2" class="card" id="main2" />
+          <img src="" alt="carte3" class="card" id="main3" />
+          <img src="" alt="carte4" class="card" id="main4" />
+          <img src="" alt="carte5" class="card" id="main5" />
+        </div>
+        
+        <img src="./assets/logoUWin.png" alt="you win" class="logoWin" id="uWin">
+        <img src="./assets/logoULoose.png" alt="u loose" class="logoLoose" id="uLoose">
+        <img src="./assets/tryAgain.png" alt="try again" class="tryAgain" id="tryAgain">
+
     </div>
     <script src="script/structure.js"></script>
     <script src="script/main.js"></script>
